# lc3_android

./: meson.build
lc3/: lc3encoder.c  meson.build
lc3/src/: meson.build
